tests/simple_tests/syntaxError/errorBrackets.py
def f(a):
	print(a)

f 42)
f(43)